--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         array= ["掃除","買い物","散歩"];
         task();
 
-        var result = window.prompt("タスクを入力してください");
+        let result = window.prompt("タスクを入力してください");
         window.alert("タスクを追加しました");
         array.push(result);
         
         task();
 
-        var result = window.prompt("「確認,追加,削除,終了」の4つのいずれかを入力してください");
+        result = window.prompt("「確認,追加,削除,終了」の4つのいずれかを入力してください");
 
 
     </script>
